--- a/src/ui/about.css
+++ b/src/ui/about.css
@@ -59,6 +59,7 @@
         align-items: center;
         gap: .5rem;
         margin: 7rem 0rem;
+        padding: 2px;
     }
 
     .heading .line {
